feat: toList 사용